[metadata]
name = molang
version = attr: molang.__version__
author = Legopitstop
author_email=legopitstop@lpsmods.dev
description=Molang to Python Translator & interpreter written in pure Python.
keywords=Minecraft: Bedrock Edition, molang, language, dsl
url=https://github.com/legopitstop/molang-py/
project_urls=
    Download=https://github.com/legopitstop/molang-py/releases
    Documentation=https://docs.lpsmods.dev/molang
    Source Code=https://github.com/legopitstop/molang-py
long_description=file: README.md
long_description_content_type=text/markdown
license=MIT
license_file=LICENSE
# Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    pydantic

[options.entry_points]
console_scripts =
    molang = molang.toolchain.cli:main

[flake8]
max-line-length=160
extend-ignore=F401, F403
